infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bible-ui
  namespace: bible
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - k8s-bible-ui.rkeplin.com
        - bible-ui.rkeplin.com
      secretName: k8s-bible-ui-tls
  rules:
    - host: k8s-bible-ui.rkeplin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bible-ui
                port:
                  number: 80
    - host: bible-ui.rkeplin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bible-ui
                port:
                  number: 80
